<resources>
    <string name="app_name">Star Wars Data Pad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quests_btn">Quests</string>
    <string name="trade_btn">Trade</string>
    <string name="upgrade_btn">Upgrade</string>
    <string name="credits">Credits: %s</string>
    <string name="score">Score: %s</string>
    <string name="home_btn">Home</string>
    <string name="buy_tab">Buy</string>
    <string name="sell_tab">Sell</string>
    <string name="quest_info">Quest info</string>
    <string name="quest_id_text">Quest ID:</string>
    <string name="_4357">4357</string>
    <string name="quest_name">Quest Name</string>
    <string name="enter_upgrade">Enter Upgrade # :</string>
    <string name="inventory">Inventory</string>
    <string name="id">Inventory ID:</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="price_ea">Price/ea</string>
    <string name="qty_buy">Qty: %s</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="clear">Clear</string>
    <string name="aurebesh_translation">Aurebesh translation</string>
    <string name="space">Space</string>
    <string name="backspace">Backspace</string>
    <string name="aurebesh_letter">Aurebesh Letter</string>
    <string name="translate">Translate</string>
    <string name="buy_upgrade">Buy Upgrade</string>
    <string name="upgrade_id">Upgrade ID:</string>
    <string name="_435">435</string>
    <string name="_46725">46725</string>
    <string name="_435723">435723</string>
    <string name="_43573">43573</string>
    <string name="sell_value">Sell Value</string>
</resources>