<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toStartOf="@+id/credits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quest_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:text="@string/quests_btn"
        app:icon="@drawable/quest"
        app:layout_constraintBottom_toTopOf="@+id/trade_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/trade_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/trade_btn"
        app:icon="@drawable/trade"
        app:layout_constraintBottom_toTopOf="@+id/upgrade_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest_btn" />

    <Button
        android:id="@+id/upgrade_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/upgrade_btn"
        app:icon="@drawable/upgrade"
        app:layout_constraintBottom_toTopOf="@+id/translate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trade_btn" />

    <Button
        android:id="@+id/translate_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        app:icon="@drawable/translate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgrade_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>